Add integration tests and fix endpoint resolution for aws2-translate